# ScienceGround2021

./: .gitignore
.github/workflows/: go.yml
3d_model/: Base_MainBoard.STL
src/: docker-compose.yml  nginx.conf
src/3d_model/: PORTA PULSANTIERA.stl  Supporti_pulsantiera.STL  anello_di_bloccaggio.stl  piastra_reggi_pcb.stl
src/3d_model/step_file/: PORTA PULSANTIERA v4.step  prova2_sienceground v2.step  prova_sienceground v1.step
src/mcu/: ESP32_Science_Ground.ino.cpp  ESP8266_CCS811_HDC1080_BMP280_OLED_Thingspeak_GP2Y10_Config.ino.cpp
src/mcu/ESP32_Science_Ground/: ESP32_Science_Ground.ino
src/mcu/arduino/: ESP32_Science_Ground.ino
src/mqttIntegrationLayer/: Cargo.toml  Makefile
src/mqttIntegrationLayer/mqttRouter/: Cargo.toml
src/mqttIntegrationLayer/mqttToRest/: Cargo.toml
src/mqttIntegrationLayer/mqttToRest/src/: lib.rs  main.rs
src/mqttIntegrationLayer/mqttToRest/tests/: integration_test.rs
src/science-ground-webapp/: .env  .env.dev  .env.development  Dockerfile  package.json  vue.config.js
src/science-ground-webapp/public/: index.html
src/science-ground-webapp/src/: App.vue  main.js  router.js
src/server/: .env  .env.dev  Dockerfile  README.md  cURL_api_test.txt  dataHandler.go  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  nginx.conf  server.go  sqlite-scienceground.db
src/server/handlers/: authAPIHandler.go  client.go  dataAPIHandler.go  dbHandler.go  hub.go
src/server/repository/: repository.go  repository_test.go
src/server/scripts/: cross_build_all.bat  generateMeasures.py
src/server/src/: authAPIHandler.go  (+7 more)
(+27 files in other folders)
